--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ section{
  section {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
   display: flex;
   justify-content: center;
