--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ svg{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 section:before {
   content: "";
