--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@ svg{
   width: 50%;
   height: 50%;
   text-align: center;
-  margin-left: 30px;
 
 }
  section {
@@ -395,13 +394,15 @@ img {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
+  color: #eeff02fd;
+  background-color: #009578;
+  font-size: 22px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
-  width: 100%;
+  width: 50%;
   text-align: center;
+  font-weight: bold;
 }
 
 /* Number text (1/3 etc) */
