--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ footer {
 .message{
   margin: 0px 10px auto;
 }
+
 /*  message field */
 .form-field {
 
@@ -118,7 +119,7 @@ form.widget-container {
   flex-direction: column;
   margin: 0 auto;
   width: 100%;
-  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 button#send.button-primary {
@@ -255,7 +256,7 @@ svg{
   display: flex;
   justify-content: center;
   align-items: center;
-  /* height: 100vh; */
+  height: 60vh;
 }
 section:before {
   content: "";
@@ -596,7 +597,8 @@ a.social:hover {
 @media (min-width: 768px) {
 
   section{
-font-size: 3em;
+font-size: 5em;
+height: 60vh;
 
   }
   .timeline__component--bg:hover img{
@@ -649,5 +651,5 @@ font-size: 3em;
               font-family: "Garamond";
               font-size: 7em;
             }
-       
+
     }
