--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ svg{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60vh;
+  height: 100%;
 }
 section:before {
   content: "";
@@ -650,5 +650,7 @@ font-size: 5em;
               font-family: "Garamond";
               font-size: 7em;
             }
-
-    }
+            /* section{ */
+            /* height: 100%; */
+            /* } */
+          }
