--- a/style.css
+++ b/style.css
@@ -27,6 +27,16 @@ body {
 
 
 }
+    
+.banner{
+  height: 100vh;
+  place-content: center;
+  font-family: "Garamond";
+  font-size: 7em;
+}
+.message-and-settings{
+  height: 100vh;
+}
 
 /* .timeline__component { */
   /* margin: 0 20px 20px 20px; */
@@ -97,6 +107,7 @@ footer {
   z-index: 2;
   text-align: center;
   align-items: center;
+  background: linear-gradient(to top, #e8a412, transparent);
 
 }
 .widget-container{
@@ -229,7 +240,7 @@ svg{
 }
 .mainPage{
   height: 45vh;
-  display: grid;
+  /* display: grid; */
   place-content: center;
   font-family: "Garamond";
   font-size: 4em;
@@ -267,7 +278,6 @@ section:before {
   bottom: 0;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to top, #e8a412, transparent);
   /* z-index: 10000; */
 }
 section:after {
@@ -585,11 +595,9 @@ a.social:hover {
 /* @keyframes spin { */
    /* 100% {transform: rotate(360deg); transform:rotate(360deg); } */
 /* } */
+/*  */
 
 
-/* .banner{ */
-  /* margin: 0px 0px 150px; */
-/* } */
 .timeline__component--bg {
 
    animation:spin 2s ease-in-out;
@@ -611,8 +619,7 @@ font-size: 5em;
     transition: all 2s;
   }
   .mainPage{
-    height: 70vh;
-    display: grid;
+    height: 100vh;
     place-content: center;
     font-family: "Garamond";
     font-size: 4em;
@@ -622,6 +629,8 @@ font-size: 5em;
   /* } */
   form.widget-container{
     width: 100%;
+    height: 100%;
+
    }
 
    h2#text{
@@ -630,13 +639,14 @@ font-size: 5em;
     text-align: center;
 top: auto;
   }
+
  
 }
 @media (max-width: 1024px) {
 
   h2#text{
         color: #e8a412;
-        font-size:6vw;
+        font-size:10vw;
         z-index: 1;
         text-align: center;
       }
@@ -649,16 +659,13 @@ top: auto;
 
             /* .below{ */
               /* height: 100%; */
-            /* } */
-            .banner{
-              height: 100vh;
-              place-content: center;
-              display: grid;
-              font-family: "Garamond";
-              font-size: 7em;
-            }
+
             /* section{ */
             /* height: 100%; */
             /* } */
-
+            .banner{
+              display: flex;
+              flex-direction: column;
+              margin-bottom: .5em;
+              }
           }
