--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ svg{
 }
 section:before {
   content: "";
-  position: absolute;
+  /* position: absolute; */
   bottom: 0;
   width: 100%;
   height: 100px;
@@ -282,7 +282,6 @@ section:before {
 }
 section:after {
   content: "";
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
