--- a/style.css
+++ b/style.css
@@ -38,10 +38,6 @@ body {
   height: 100vh;
 }
 
-/* .timeline__component { */
-  /* margin: 0 20px 20px 20px; */
-/* } */
-
 .timeline__component--bg {
   padding: 1.5em;
   background: rgba(255, 255, 255, 0.2);
@@ -190,17 +186,6 @@ a.social:hover {
   opacity: 1.5;
 
 }
-/* .below{ */
-  /* height: 80vh; */
-/* } */
-/* .below{ */
-  /* background-image: url('img/Plant-Roots-rhizosphere.jpeg'); */
-/* background-size: cover; */
-/* } */
-/* .footerSec{ */
-  /* z-index: 2; */
-/*  */
-/* } */
 
 .line-container{
   position: fixed;
@@ -377,43 +362,43 @@ h2{
   color: #fff;
 }
 
-
-
-.navbar{
-  margin-bottom: 0;
+/* * Add a black background color to the top navigation */ 
+.topnav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-.navbar ul{
-  list-style: none;
-  background: #81be3f;
-  display: flex;
-  justify-content: flex-end;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 0px;
-  grid-area: navigation;
-
-}
-
-
-.navbar li {
-  list-style: none;
-  margin-right: 2rem;
-}
-
-.navbar a {
-  text-decoration: none;
-  color: #fff;
-  width: 100px;
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
   display: block;
-  padding: 25px 20px;
-  font-family: arial;
+  color: #f2f2f2;
   text-align: center;
-  margin: 0;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-.navbar a:hover {
-  background: #ccc;
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
 }
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+
+
+}
+
+
 .linResume{
   text-decoration: none;
   color: rgb(255, 255, 255);
@@ -520,31 +505,6 @@ img {
   background-color: #717171;
 }
 
-/* Fading animation */
-/* .fade { */
-  /* animation-name: fade; */
-  /* animation-duration: 1.5s; */
-/* } */
-
-/* @keyframes fade { */
-  /* from {opacity: .4}  */
-  /* to {opacity: 1} */
-/* } */
-
-/* On smaller screens, decrease text size */
-/* @media only screen and (max-width: 300px) { */
-  /* .prev, .next,.text {font-size: 11px} */
-/* } */
-/* footer { */
-  /* width: 100%; */
-  /* min-height: 30px; */
-  /* padding: 20px 0 40px 20px; */
-  /* text-align: center; */
-  /* align-items: center; */
-/* } */
-
-
-
 
 footer .copyright {
   top: -8px;
@@ -607,11 +567,30 @@ a.social:hover {
 }
 
 
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 
-@media (min-width: 768px) {
+}
+@media screen and (min-width: 768px) {
 .banner{
   font-size: 10em;
 }
+
   section{
 font-size: 5em;
 
@@ -645,7 +624,8 @@ top: auto;
 
  
 }
-@media (max-width: 1024px) {
+
+@media screen and (max-width: 1024px) {
 
   h2#text{
         color: #e8a412;
@@ -653,19 +633,7 @@ top: auto;
         z-index: 1;
         text-align: center;
       }
-
-      .navbar ul{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-            }
-
-            /* .below{ */
-              /* height: 100%; */
-
-            /* section{ */
-            /* height: 100%; */
-            /* } */
+     
             .banner{
               display: flex;
               flex-direction: column;
