--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
   background:#789a2e;
  
 }
+header{
+  background-color: rgb(120,154,46);
+}
 .container {
   min-height: 800px;
   text-align: center;
@@ -207,10 +210,6 @@ a.social:hover {
 /*  */
 /* } */
 
-nav li {
-  position: relative;
-  z-index: 2;
-}
 /*  */
 /* .one{ */
   /* background: url('img/Plant-Roots-rhizosphere.jpeg'); */
@@ -364,41 +363,7 @@ h2{
 }
 
 /* * Add a black background color to the top navigation */ 
-.topnav {
-  background-color: #333;
-  overflow: hidden;
 
-}
-
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-
-}
-
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-  display: none;
-
-}
 
 
 .linResume{
@@ -504,7 +469,7 @@ img {
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: rgb(120,154,46);
 }
 
 
@@ -549,6 +514,14 @@ a.social:hover {
   opacity: 1;
 }
 
+.bar{
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
 
 /* .timeline__component--bg { */
 /*  */
@@ -559,6 +532,32 @@ a.social:hover {
 /* } */
 /*  */
 
+li{
+  list-style: none;
+}
+a{
+  color: white;
+}
+.navbar{
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+position: relative;
+  z-index: 3;
+}
+.nav-menu{
+gap: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.burger{
+  display: none;
+  cursor: pointer;
+  }
 
 .timeline__component--bg {
 
@@ -570,24 +569,36 @@ a.social:hover {
 
 
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
+
+  .burger{
     display: block;
   }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+  .burger.active .bar:nth-child(2){
+    opacity: 0;
   }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+  .burger.active .bar:nth-child(1){
+transform: translateY(-8px) rotate(-45deg);
 
 }
+.nav-menu{
+  position: fixed;
+  left: -100%;
+  top:70px;
+  gap: 0;
+  flex-direction: column;
+  background-color:  rgb(120,154,46);
+  width: 100%;
+  text-align: center;
+  transition: 0.3s;
+}
+.nav-item{
+  margin: 16px 0;
+}
+.nav-menu.active{
+  left: 0;
+}
+}
+
 @media screen and (min-width: 768px) {
 .banner{
   font-size: 10em;
