--- a/style.css
+++ b/style.css
@@ -563,7 +563,7 @@ transform: translateY(-8px) rotate(-45deg);
 
 }
 .nav-menu{
-  position: fixed;
+  position:absolute;
   left: -100%;
   top:70px;
   gap: 0;
