--- a/style.css
+++ b/style.css
@@ -559,9 +559,13 @@ gap: 60px;
     opacity: 0;
   }
   .burger.active .bar:nth-child(1){
-transform: translateY(-8px) rotate(-45deg);
+transform: translateY(8px) rotate(45deg);
 
 }
+.burger.active .bar:nth-child(3){
+  transform: translateY(-8px) rotate(-45deg);
+  
+  }
 .nav-menu{
   position:absolute;
   left: -100%;
